--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,9 +5,11 @@ on:
   push:
     branches: [ "main" ]
 
+
 jobs:
-  compile:
+  build:
     runs-on: ubuntu-latest
+
 
     steps:
     - uses: actions/checkout@v4
